Coplanar faces, but with inverted Normal, are not considered coplanar in Blender. #45620

Closed
opened 2015-07-30 15:39:10 +02:00 by Germano Cavalcante · 4 comments

Short description of error
When using the operator "bmesh.ops.similar_faces," to get a list of all coplanar faces, observe that it returns a list containing only the faces which have the same Normal. Ignores the coplanar faces with Normal reversed.

Exact steps for others to reproduce the error
Make an object whose mesh has coplanar faces and some have reversed Normal. Then run this code in the text editor:

print('--------------------')
import bpy
import bmesh
from enum import IntEnum

class SIM_CMP(IntEnum):
    EQ, GT, LT = range(3)

class SIMFACE(IntEnum):
    MATERIAL = 201
    IMAGE = 202
    AREA = 203
    SIDES = 204
    PERIMETER = 205
    NORMAL = 206
    COPLANAR = 207
    SMOOTH = 208
    FREESTYLE = 209

ob = bpy.context.object
assert ob is not None
me = ob.data
bm = bmesh.from_edit_mesh(me)

ret = bmesh.ops.similar_faces(
    bm,
    faces=[bm.faces.active], #[bm.faces[0]],
    type=SIMFACE.COPLANAR,
    thresh=0.01,
    compare=SIM_CMP.EQ
)

for face in ret['faces']:
    print(face)
    face.select_set(True)
bmesh.update_edit_mesh(me)

Note that there's no way to select all coplanar faces.
bug test coplanar.blend

**Short description of error** When using the operator "bmesh.ops.similar_faces," to get a list of all coplanar faces, observe that it returns a list containing only the faces which have the same Normal. Ignores the coplanar faces with Normal reversed. **Exact steps for others to reproduce the error** Make an object whose mesh has coplanar faces and some have reversed Normal. Then run this code in the text editor: ``` print('--------------------') import bpy import bmesh from enum import IntEnum class SIM_CMP(IntEnum): EQ, GT, LT = range(3) class SIMFACE(IntEnum): MATERIAL = 201 IMAGE = 202 AREA = 203 SIDES = 204 PERIMETER = 205 NORMAL = 206 COPLANAR = 207 SMOOTH = 208 FREESTYLE = 209 ob = bpy.context.object assert ob is not None me = ob.data bm = bmesh.from_edit_mesh(me) ret = bmesh.ops.similar_faces( bm, faces=[bm.faces.active], #[bm.faces[0]], type=SIMFACE.COPLANAR, thresh=0.01, compare=SIM_CMP.EQ ) for face in ret['faces']: print(face) face.select_set(True) bmesh.update_edit_mesh(me) ``` Note that there's no way to select all coplanar faces. [bug test coplanar.blend](https://archive.blender.org/developer/F216108/bug_test_coplanar.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by c2c4e02d41

This issue was referenced by c2c4e02d4188347aafb5be173be482a21c17b5f2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45620
No description provided.