Fix T45620: Coplanar faces w/ flipped normals not selected